Agrego: pagina historia con autocerrado

--- a/assets/html/welcome.html
+++ b/assets/html/welcome.html
@@ -23,17 +23,16 @@
                     <h1>Bienvenido<br>a<br>FrikiGit</h1>                    
                 </section>
                 <section class="animate__animated animate__backInUp"  data-os-animation-delay=".1s">
-                    <a href="" class="btn" id="btn-welcome" onclick="closeCurrentWindow()">EMPECEMOS YA !!</a>
-                    <audio src="../audio/what-we-became-pecan-pie-main-version-16028-02-43.mp3" controls></audio>
+                    <a href="../../index.html" class="btn" id="btn-welcome">EMPECEMOS YA !!</a>
                 </section>
             </div>
         </div>
     </section>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         function closeCurrentWindow()
         {
           window.close();
         }
-        </script>
+        </script> -->
 </body>
 </html>
