--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             <div class="home-banner home-banner-1">
               <div class="home-banner-text">
                 <h1>FrikiGit</h1>
-                <h2>52% Descuento para esta sesión</h2>
-                <a href="#products" class="btn btn-danger text-uppercase mt-4"
-                  >Tus productos</a
+                <h2>Conoce Nuestra Historia</h2>
+                <a href="./assets/html/history.html" target="_blank" class="btn btn-danger text-uppercase mt-4"
+                  >Una historia Friki <img class="icono-enviar" src="./assets/img/FrikiGit-logo.png" alt=""></a
                 >
               </div>
             </div>
@@ -122,7 +122,7 @@
                 <h1>E-Shop</h1>
                 <h2>Tarjeta de credito & Pay Pal</h2>
                 <a href="#products" class="btn btn-danger text-uppercase mt-4"
-                  >Tus productos</a
+                  >Terminos y condiciones</a
                 >
               </div>
             </div>
@@ -708,7 +708,7 @@
             </div>
             <div class="col-lg-7 col-md-7 pt-lg-0 pt-md-0 pt-4">
 <!-- Formulario -->
-              <form>
+              <form action="https://formsubmit.co/willyy127@gmail.com" method="POST" target="_blank">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
@@ -745,7 +745,7 @@
                     </div>
                   </div>
                   <div class="col-md-12">
-                    <button class="btn btn-danger" style="
+                    <button type="submit" class="btn btn-danger" style="
                     padding-top: 8px;
                     padding-bottom: 8px;
                     padding-left: 8px;
@@ -753,6 +753,15 @@
                      ">
                       <span><img class="icono-enviar" src="./assets/img/FrikiGit-logo.png" alt=""> Enviar Mensaje</span>
                     </button>
+                    <div class="col-md-12">
+                      <button type="reset" class="btn btn-danger" style="
+                      padding-top: 8px;
+                      padding-bottom: 8px;
+                      padding-left: 8px;
+                      padding-right: 8px;
+                      margin-top: 6px;
+                       ">Limpiar 🧹
+                      </button>
                   </div>
                 </div>
               </form>
@@ -816,13 +825,13 @@
 
 <!-- Main  JS externo ((intento de crear onload que manda a la pag welcome)) -->
    
-    <script language=javascript> 
+    <!-- <script language=javascript> 
       function ventanaSecundaria (URL){ 
          window.open(URL,"ventana1","width=10000,height=10000,scrollbars=NO") 
       } 
       
       ventanaSecundaria("./assets/html/welcome.html"); 
-      </script>
+      </script> -->
     <script src="./assets/js/main.js"></script>   
   </body>
 </html>
