Cambio a href del botón de E-Shop

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <div class="home-banner-text">
                 <h1>E-Shop</h1>
                 <h2>Tarjeta de credito & Pay Pal</h2>
-                <a href="#products" class="btn btn-danger text-uppercase mt-4"
+                <a href="./assets/html/welcome.html" class="btn btn-danger text-uppercase mt-4"
                   >Terminos y condiciones</a
                 >
               </div>
