Cambio color corporativo y agrego comentarios

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               alt="logo-empresa"
             />
           </a>
-<!-- Botón del carrito -->
+<!-- Botón del carrito --> 
           <button class="boton-carrito " id="boton-carrito" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="ti-shopping-cart" aria-hidden="true"></i> <span id="contadorCarrito">0</span>
           </button>          
           <button
@@ -190,9 +190,7 @@
               </a>
             </div>
 <!-- Offer Box Two -->
-            <div
-              class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between"
-            >
+            <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between">
               <a href="#products">
                 <div
                   class="offer-box text-center position-relative mb-4 mb-sm-0 mb-lg-0"
