--- a/assets/html/history.html
+++ b/assets/html/history.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
 </head>
-<body onload="closeWindow();">
+<body onload="closeWindow();"> <!-- Cerrar ventana automáticamente --> 
     <main class="star-wars">
         <h2>La historia de  FrikiGit</h2>
         <p>
@@ -27,8 +27,8 @@
       <script type="text/javascript">
        
            
-function closeWindow(){
-window.setTimeout('window.close()',35000)
+function closeWindow(){ // Función para cerrar la ventana automáticamente 
+window.setTimeout('window.close()',35000) // Tiempo en milisegundos (1000 = 1 segundo) 
 
 }
 </script>
