cambiar email de contacto en info y en form

--- a/index.html
+++ b/index.html
@@ -700,13 +700,13 @@
                 </li>
                 <li class="d-flex align-items-center">
                   <span class="pe-3 ti-envelope fs-5"></span>
-                  <p><a href="">info@shop.in</a></p>
+                  <p><a href="">frikigit2023@gmail.com</a></p>
                 </li>
               </ul>
             </div>
             <div class="col-lg-7 col-md-7 pt-lg-0 pt-md-0 pt-4">
 <!-- Formulario -->
-              <form action="https://formsubmit.co/willyy127@gmail.com" method="POST" target="_blank">
+              <form action="https://formsubmit.co/frikigit2023@gmail.com" method="POST" target="_blank">
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group">
