error img corregido

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link
       rel="icon"
       type="image/jpg"
-      href="./assets/img/PngItem_112730 - copia.ico"
+      href="./assets/img/PngItem_112730.png"
     />
     <script defer src="assets/js/stock.js"></script>
     <script defer src="assets/js/app.js"></script>
