añado la el botón pagar y paypal

--- a/index.html
+++ b/index.html
@@ -640,6 +640,7 @@
         </div>
         <div class="modal-footer">
           <p class="precioProducto">Precio total: <b><span id="precioTotal">0</span> €</b></p>
+          <a id="pagar-carrito" class="btn btn-danger" href="carrito.html">Pagar</a>
           <button id="vaciar-carrito" type="button" class="btn btn-danger">Vaciar carrito</button>
         </div>
       </div>
