--- a/index.html
+++ b/index.html
@@ -118,42 +118,20 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
         <div class="row">
           <!-- Offer Box One -->
           <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
-            <a href="#products">
+            <a href="https://www.coches.net/" target="_blank">
               <div class="offer-box text-center position-relative">
                 <div class="offer-inner">
                   <div class="offer-image position-relative overflow-hidden">
-                    <picture>
-                    <source
-                       sizes="1920w, 1280w, 640w" 
-                       srcset="assets/img/chico-entero500x375.avif 1920w, 
-                       assets/img/chico-entero500x375.avif 1280w, 
-                       assets/img/chico-entero500x375.avif 640w" 
-                       type="image/avif">
-                    <source
-                       sizes="1920w, 1280w, 640w" 
-                       srcset="assets/img/chico-entero500x375.webp 1920w, 
-                       assets/img/chico-entero500x375.webp 1280w, 
-                       assets/img/chico-entero500x375.webp 640w" 
-                       type="image/webp">
-                    <source
-                       sizes="1920w, 1280w, 640w" 
-                       srcset="assets/img/chico-entero500x375.jpg 1920w, 
-                       assets/img/chico-entero500x375.jpg 1280w, 
-                       assets/img/chico-entero500x375.jpg 640w" 
-                       type="image/jpeg">
-                    <img loading="lazy" decoding="async" src="assets/img/chico-entero500x375.jpg" lazyalt="imagen" width="500" height="300">
-                    </picture>
+                    <video class="img-fluid" src="assets/video/coche.mp4" autoplay muted loop></video>
                     <!-- <img src="assets/img/chico-entero500x375.jpg" alt="Offers" class="img-fluid" /> -->
                     <div class="offer-overlay"></div>
                   </div>
                   <div class="offer-info">
                     <div class="offer-info-inner">
-                      <p class="heading-bigger text-capitalize">rebaja 30%</p>
-                      <p class="offer-title-1 text-uppercase font-weight-bold">
+                      <!-- <p class="heading-bigger text-capitalize">rebaja 30%</p> -->
+                      <!-- <p class="offer-title-1 text-uppercase font-weight-bold">
                         No pierdas esta oportunidad
-                      </p>
-                      <button type="button" class="btn btn-outline-danger text-uppercase mt-4">
-                        Comprar
+                      </p> -->
                       </button>
                     </div>
                   </div>
@@ -163,43 +141,39 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
           </div>
           <!-- Offer Box Two -->
           <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4 d-flex flex-column justify-content-between">
-            <a href="#products">
+            <a href="https://www.amazon.es/BRUBAKER-Osito-Peluche-Love-coraz%C3%B3n/dp/B081CKBRC5/ref=asc_df_B081CKBRC5/?tag=googshopes-21&linkCode=df0&hvadid=420368342860&hvpos=&hvnetw=g&hvrand=11054315945368208299&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9061051&hvtargid=pla-852206884468&psc=1&tag=&ref=&adgrpid=96927276395&hvpone=&hvptwo=&hvadid=420368342860&hvpos=&hvnetw=g&hvrand=11054315945368208299&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9061051&hvtargid=pla-852206884468" target="_blank">
               <div class="offer-box text-center position-relative mb-4 mb-sm-0 mb-lg-0">
                 <div class="offer-inner">
                   <div class="offer-image position-relative overflow-hidden">
-                    <img src="assets/img/camiseta-azul375x240.webp" alt="Offers" class="img-fluid" />
+                    <video class="img-fluid" src="assets/video/osito.mp4" autoplay muted loop></video>
+                    <!-- <img src="assets/img/camiseta-azul375x240.webp" alt="Offers" class="img-fluid" /> -->
                     <div class="offer-overlay"></div>
                   </div>
                   <div class="offer-info">
                     <div class="offer-info-inner">
-                      <p class="heading-bigger text-capitalize">rebaja 70%</p>
-                      <p class="offer-title-1 text-uppercase font-weight-bold">
+                      <!-- <p class="heading-bigger text-capitalize">rebaja 70%</p> -->
+                      <!-- <p class="offer-title-1 text-uppercase font-weight-bold">
                         No pierdas esta oportunidad
-                      </p>
-                      <button type="button" class="btn btn-outline-danger text-uppercase mt-4">
-                        Comprar
-                      </button>
+                      </p> -->
                     </div>
                   </div>
                 </div>
               </div>
             </a>
-            <a href="#products">
+            <a href="https://es.wikipedia.org/wiki/Viernes_negro_(compras)" target="_blank">
               <div class="offer-box text-center position-relative">
                 <div class="offer-inner">
                   <div class="offer-image position-relative overflow-hidden">
-                    <img src="assets/img/tazas375x240.webp" alt="Offers" class="img-fluid" />
+                    <video class="img-fluid" src="assets/video/black_friday.mp4" autoplay muted loop></video>
+                    <!-- <img src="assets/img/tazas375x240.webp" alt="Offers" class="img-fluid" /> -->
                     <div class="offer-overlay"></div>
                   </div>
                   <div class="offer-info">
                     <div class="offer-info-inner">
-                      <p class="heading-bigger text-capitalize">rebaja 50%</p>
+                      <!-- <p class="heading-bigger text-capitalize">rebaja 50%</p> -->
                       <p class="offer-title-1 text-uppercase font-weight-bold">
-                        No pierdas esta oportunidad
+                        Anuncia tu publicidad aquí
                       </p>
-                      <button type="button" class="btn btn-outline-danger text-uppercase mt-4">
-                        Comprar
-                      </button>
                     </div>
                   </div>
                 </div>
@@ -209,22 +183,24 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
 
           <!-- Offer Box Three -->
           <div class="col-sm-6 col-lg-4 mb-lg-0 mb-4">
-            <a href="#products">
+            <a href="https://www.taquilla.com/entradas/la-hora-y-media-de-el-club-de-la-comedia-madrid" target="_b
+            ">
               <div class="offer-box text-center position-relative">
                 <div class="offer-inner">
                   <div class="offer-image position-relative overflow-hidden">
-                    <img src="assets/img/chicagithub500x375.webp" alt="Offers" class="img-fluid" />
+                    <video class="img-fluid" src="assets/video/talent.mp4" autoplay muted loop></video>
+                    <!-- <img src="assets/img/chicagithub500x375.webp" alt="Offers" class="img-fluid" /> -->
                     <div class="offer-overlay"></div>
                   </div>
                   <div class="offer-info">
                     <div class="offer-info-inner">
-                      <p class="heading-bigger text-capitalize">rebaja 25%</p>
-                      <p class="offer-title-1 text-uppercase font-weight-bold">
+                      <!-- <p class="heading-bigger text-capitalize">rebaja 25%</p> -->
+                      <!-- <p class="offer-title-1 text-uppercase font-weight-bold">
                         No pierdas esta oportunidad
-                      </p>
-                      <button type="button" class="btn btn-outline-danger text-uppercase mt-4">
+                      </p> -->
+                      <!-- <button type="button" class="btn btn-outline-danger text-uppercase mt-4">
                         Comprar
-                      </button>
+                      </button> -->
                     </div>
                   </div>
                 </div>
@@ -248,197 +224,14 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
           </div>
         </div>
       </div>
+
+
       <div class="row" id="contenedor-productos">
-        <!--! Producto 1 -->
-        <!-- <div class="col-sm-6 col-lg-4" id="1">
-            <a href="#" class="d-block text-center mb-4">
-              <div class="product-list">
-                <div class="product-image position-relative">
-                  <span class="sale">Rebaja</span>
-                  <img
-                    src="assets/img/chica1-frente970x100wechicagithub500x375.webp"
-                    class="img-fluid product-image-first"
-                    alt="products"
-                  />
-                  <img
-                    src="assets/img/chica1-espaldaswechicagithub500x375.webp"
-                    class="img-fluid product-image-secondary"
-                    alt="products"
-                  />
-                </div>
-                <div class="product-name pt-3">
-                  <h3 class="text-capitalize">Camiseta manga corta chica</h3>
-                  <p class="mb-0 amount">10.00€ <del>15.00€</del></p>
-                  <div class="py-1">
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                  </div>
-                  <button type="button" class="add_to_card" id="add_to_card">AÑADIR🛒</button>
-                </div>
-              </div>
-            </a>
-          </div> -->
-        <!--! Producto 2 -->
-        <!-- <div class="col-sm-6 col-lg-4" id="2">
-            <a href="#" class="d-block text-center mb-4">
-              <div class="product-list">
-                <div class="product-image position-relative">
-                  <img
-                    src="assets/img/chico-entero-frente970x1000.jpg"
-                    class="img-fluid product-image-first"
-                    alt="products"
-                  />
-                  <img
-                    src="assets/img/chico-entero-espalda907x1000.jpg"
-                    class="img-fluid product-image-secondary"
-                    alt="products"
-                  />
-                </div>
-                <div class="product-name pt-3">
-                  <h3 class="text-capitalize">Camiseta casual chico</h3>
-                  <p class="mb-0 amount">15.00€</p>
-                  <div class="py-1">
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                  </div>
-                  <button type="button" class="add_to_card">AÑADIR🛒</button>
-                </div>
-              </div>
-            </a>
-          </div> -->
-        <!--! Producto 3  -->
-        <!--  <div class="col-sm-6 col-lg-4" id="3">
-            <a href="#" class="d-block text-center mb-4">
-              <div class="product-list">
-                <div class="product-image position-relative">
-                  <img
-                    src="assets/img/chica2-frente970x1000.jpg"
-                    class="img-fluid product-image-first"
-                    alt="products"
-                  />
-                  <img
-                    src="assets/img/chica2-espaldas.jpg.jpg"
-                    class="img-fluid product-image-secondary"
-                    alt="products"
-                  />
-                </div>
-                <div class="product-name pt-3">
-                  <h3 class="text-capitalize">Camisetas chica dos colores</h3>
-                  <p class="mb-0 amount">15.00€</p>
-                  <div class="py-1">
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                  </div>
-                  <button type="button" class="add_to_card">AÑADIR🛒</button>
-                </div>
-              </div>
-            </a>
-          </div> -->
-        <!--! Producto 4 -->
-        <!-- <div class="col-sm-6 col-lg-4" id="4">
-            <a href="#" class="d-block text-center mb-4">
-              <div class="product-list">
-                <div class="product-image position-relative">
-                  <img
-                    src="assets/img/chico5-gris-frente970x100.jpg"
-                    class="img-fluid product-image-first"
-                    alt="products"
-                  />
-                  <img
-                    src="assets/img/chico5-gris-espalda970x1000.jpg"
-                    class="img-fluid product-image-secondary"
-                    alt="products"
-                  />
-                </div>
-                <div class="product-name pt-3">
-                  <h3 class="text-capitalize">Camiseta chico gris</h3>
-                  <p class="mb-0 amount">12.00€</p>
-                  <div class="py-1">
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                  </div>
-                  <button type="button" class="add_to_card">AÑADIR🛒</button>
-                </div>
-              </div>
-            </a>
-          </div> -->
-        <!--! Producto 5 -->
-        <!-- <div class="col-sm-6 col-lg-4" id="5">
-            <a href="#" class="d-block text-center mb-4">
-              <div class="product-list">
-                <div class="product-image position-relative">
-                  <span class="sale">Rebaja</span>
-                  <img
-                    src="assets/img/chica3-frente-blk970x1000.jpg"
-                    class="img-fluid product-image-first"
-                    alt="products"
-                  />
-                  <img
-                    src="assets/img/chica3-espalda-blk970x1000.jpg"
-                    class="img-fluid product-image-secondary"
-                    alt="products"
-                  />
-                </div>
-                <div class="product-name pt-3">
-                  <h3 class="text-capitalize">Camiseta de chica negra</h3>
-                  <p class="mb-0 amount">10.00€ <del>15.00€</del></p>
-                  <div class="py-1">
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                  </div>
-                  <button type="button" class="add_to_card">AÑADIR🛒</button>
-                </div>
-              </div>
-            </a>
-          </div> -->
-        <!--! Producto 6 -->
-        <!-- <div class="col-sm-6 col-lg-4" id="6">
-            <a href="#" class="d-block text-center mb-4">
-              <div class="product-list">
-                <div class="product-image position-relative">
-                  <span class="sale">Rebaja</span>
-                  <img
-                    src="assets/img/chico3-frente970X1000.jpg"
-                    class="img-fluid product-image-first"
-                    alt="products"
-                  />
-                  <img
-                    src="assets/img/chico3-espaldas970X1000.jpg"
-                    class="img-fluid product-image-secondary"
-                    alt="products"
-                  />
-                </div>
-                <div class="product-name pt-3">
-                  <h3 class="text-capitalize">Camiseta de chico manga larga</h3>
-                  <p class="mb-0 amount">12.50€ <del>25.00€</del></p>
-                  <div class="py-1">
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star active"></span>
-                    <span class="ti-star"></span>
-                    <span class="ti-star"></span>
-                  </div>
-                  <button type="button" class="add_to_card">AÑADIR🛒</button>
-                </div>
-              </div>
-            </a>
-          </div> -->
+
+       <!-- Aquí van los productos desede el back moqueado -->
+
       </div>
+
 
       <!-- UP to 75% OFF -->
       <div class="overflow-hidden my-5">
@@ -482,7 +275,7 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
               <li><span class="fs-1 d-block" id="sec">00</span>Sec</li>
             </ul>
             <span class="countdown-price h3 d-block mb-4">9.99€ <del>30.00€</del></span>
-            <button id="add_to_card7" type="button" class="btn btn-danger">AÑADIR 🛒</button>
+            <!-- <button id="add_to_card7" type="button" class="btn btn-danger">AÑADIR 🛒</button> -->
           </div>
         </div>
         <div class="col-sm-12 col-lg-5">
