iconos redes sociales

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
               <div class="offer-box text-center position-relative">
                 <div class="offer-inner">
                   <div class="offer-image position-relative overflow-hidden">
-                    <video class="img-fluid" src="assets/video/coche.mp4" autoplay muted loop></video>
+                    <video class="img-fluid" src="assets/video/talent.mp4" autoplay muted loop></video>
                     <!-- <img src="assets/img/chico-entero500x375.jpg" alt="Offers" class="img-fluid" /> -->
                     <div class="offer-overlay"></div>
                   </div>
@@ -146,6 +146,7 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
                 <div class="offer-inner">
                   <div class="offer-image position-relative overflow-hidden">
                     <video class="img-fluid" src="assets/video/osito.mp4" autoplay muted loop></video>
+                    <video class="img-fluid" src="assets/video/coche.mp4" autoplay muted loop></video>
                     <!-- <img src="assets/img/camiseta-azul375x240.webp" alt="Offers" class="img-fluid" /> -->
                     <div class="offer-overlay"></div>
                   </div>
@@ -481,8 +482,11 @@ yo<body data-bs-spy="scroll" data-bs-target=".navbar">
             </p>
           </div>
           <div class="col-12 col-lg-6 p-1 p-lg-3 text-center text-lg-end">
+           
             <p>
-              Diseñado por
+              <a href="https://es-es.facebook.com/" target="_blank"><img class="icono-enviar red-social" src="assets/img/icono_facebook.svg" alt="icono facebook"></a>
+              <a href="https://www.instagram.com/frikigit/" target="_blank"><img class="icono-enviar red-social" src="assets/img/icono_instagram.svg" alt="icono facebook"></a>
+              Creado por
               <a target="_blank" style="color: black; font-weight: bold">AntonioPDev</a>.
             </p>
           </div>
